# aind-analysis-job-dispatch

./: README.md
.codeocean/: app-panel.json  environment.json  secrets.json
.github/workflows/: run_tests.yml
code/: .flake8  analysis_input_model.py  example.env  pyproject.toml  run  run_capsule.py  test_get_s3_file_locations_from_docdb_query.py  test_write_input_analysis_model.py  utils.py
code/example/: input_query.json
code/job_dispatch/: __init__.py  analysis_input_model.py  run_capsule.py  utils.py
code/tests/: __init__.py  test_get_input_model_list.py  test_get_s3_file_locations_from_docdb_query.py  test_write_input_analysis_model.py
environment/: Dockerfile  environment.yml
