[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-analysis-job-dispatch"
description = "Package to define an analysis input model fetching input data on S3 from document database"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'pydantic>=2.0',
    'pydantic_settings>=2.0',
    'codeocean>=0.3.0',
]

[project.optional-dependencies]
dev = [
    'aind-analysis-job-dispatch[full]',
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo'
]
full = [
    's3fs',
    'aind-data-access-api[docdb]>=1.0.0'
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "job_dispatch.__version__"}

[tool.black]
line-length = 90
target_version = ['py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | .vscode
  )/
  | .gitignore
)
'''
[tool.coverage.run]
omit = ["*__init__*"]
source = ["job_dispatch", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "^from .* import .*",
    "^import .*",
    "pragma: no cover"
]
fail_under = 80

[tool.isort]
line_length = 90
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build", "env"]
fail-under = 100
